# relit-lifegame

./: README.md  board.re  dune  lifegame.re  lifegame_notation.re
lifegame_parser/: dune  lexer.mll  lifegame_parser.opam  parser.mly
